apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: apps
  labels:
    app: homeassistant
spec:
  selector:
    app: homeassistant-label
  ports:
  - name: homeassistant
    port: 8123
    targetPort: 8123
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: mqtt-websockets
    port: 9001
    targetPort: 9001
    protocol: TCP
  - name: code-server
    port: 8080
    targetPort: 8080
    protocol: TCP
