apps/home-assistant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingress
  namespace: apps
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`ha.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: homeassistant-service
          port: 8123
  tls:
    secretName: certificates
